Update for hid refactor, + build workflow

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,8 @@
         "*.elf": true,
         "*.nacp": true,
         "*.nro": true
+    },
+    "files.associations": {
+        "thread": "cpp"
     }
 }
